# docparse

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild-firestore-rules.yaml  deploy.sh  firebase.json  firestore.rules  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml
benchmarks/: SOURCES.md  download_test_files.sh  generate_golden.sh  quick_check.sh  run_benchmarks.py  verify_generated.py
benchmarks/competitors/: parse_unstructured.py  run_docling.py  run_llamaparse.py  run_score_eval.py  run_unstructured.py
benchmarks/metrics/: compare.py  normalize.py
benchmarks/office/: eval_office.py
benchmarks/officedocbench/: README.md  annotate.py  create_challenge_files.py  eval_officedocbench.py  report.py  scoring.py
benchmarks/omnidocbench/: .gitignore  adapter.py  run_omnidocbench.py
benchmarks/pdf/: eval_pdf.py  generate_test_pdfs.py
data/examples/: converted_sample.html  converted_sample.odt  converted_sample.pptx  demo_data.xlsx  demo_letter.odt  demo_page.html  demo_pitch.pptx  demo_report.docx
data/test_files/: gutenberg_moby_dick.epub  pandoc_basic.unstructured.json  python_pptx_slides.unstructured.json  sample.docx  test.csv  test.epub  test.html  test.md  test.odp  test.ods  test.odt  test.tsv  test_code.md  (+2 more)
design_docs/: README.md  competitive_landscape.md
docparse/: main.ail
docs/: api.html  benchmarks.html  index.html  selfhost.html  try.html
sdks/python/: README.md  pyproject.toml
sdks/python/docparse/: __init__.py  client.py  compat.py  keys.py  types.py
tests/: test_serve_api.sh
(+275 files in other folders)
