[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docparse"
version = "0.1.0"
description = "Python client for the DocParse document parsing API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "Sunholo", email = "dev@sunholo.com" }]
keywords = ["docparse", "document-parsing", "unstructured", "ailang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]
dependencies = ["requests>=2.20"]

[project.optional-dependencies]
async = ["httpx>=0.24"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://www.sunholo.com/docparse"
Repository = "https://github.com/sunholo-data/docparse"
Documentation = "https://www.sunholo.com/docparse/api.html"
